<resources>
    <string name="app_name">My Phone</string>
    <string name="phone_name">Samsung Galaxy S22</string>
    <string name="phone_price">$599</string>
    <string name="phone_description">Version : SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B, SM-5901B</string>
    <string name="memory">256 GB | 8 GB</string>
    <string name="camera">50 MP, f/1.8, 23 mm (wide)</string>
    <string name="bookmark">Bookmark</string>

</resources>