<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:id="@+id/img_phone"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/samsung"
        android:layout_below="@+id/txt_title"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/txt_phone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/img_phone"
        android:text="@string/phone_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_price"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_alignTop="@+id/txt_phone_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        />
    <TextView
        android:id="@+id/txt_phone_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_description"
        android:layout_below="@id/txt_phone_name"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        />
    <ImageView
        android:id="@+id/icon_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_camera_alt_24"
        android:layout_below="@id/txt_phone_description"
        android:layout_marginTop="8dp"
        android:layout_alignStart="@id/txt_phone_description"
        />
    <TextView
        android:id="@+id/txt_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textSize="16sp"
        android:layout_alignTop="@id/icon_camera"
        android:layout_below="@id/txt_phone_description"
        android:layout_toEndOf="@id/icon_camera"
        android:layout_marginStart="8dp"
        />
    <ImageView
        android:id="@+id/icon_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_smartphone_24"
        android:layout_below="@id/icon_camera"
        android:layout_alignStart="@id/icon_camera"

        />
    <TextView
        android:id="@+id/txt_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory"
        android:layout_toEndOf="@id/icon_memory"
        android:textSize="16sp"
        android:layout_alignTop="@id/icon_memory"
        android:layout_marginStart="8dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/bookmark"
        app:icon="@drawable/baseline_bookmark_border_24"
        app:iconGravity="textStart"
        />
</RelativeLayout>